feat: finalizing the notion of project clone

--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "convex": "convex dev"
   },
   "dependencies": {
+    "@blocknote/core": "^0.23.1",
+    "@blocknote/mantine": "^0.23.1",
+    "@blocknote/react": "^0.23.1",
     "@clerk/clerk-react": "^5.22.7",
+    "@edgestore/react": "^0.2.2",
+    "@edgestore/server": "^0.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.5",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.5",
@@ -22,16 +27,20 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "convex": "^1.18.2",
+    "emoji-picker-react": "^4.12.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.5",
+    "react-textarea-autosize": "^8.5.7",
     "sonner": "^1.7.3",
     "swr": "^2.3.0",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
+    "zod": "^3.24.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
