--- a/.env.dev
+++ b/.env.dev
@@ -6,3 +6,6 @@ NEXT_PUBLIC_CONVEX_URL=https://tough-jay-638.convex.cloud
 
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
+
+EDGE_STORE_ACCESS_KEY=
+EDGE_STORE_SECRET_KEY=
